src/conferences/rs/sass/components/_osa-award.sass
.s-osa-award
  padding: clamp(50px, 5vw, 100px) 0

.osa-award
  margin: clamp(40px, 6vw, 94px) 0 0

  &__content
    display: flex
    max-width: 824px
    margin: 0 auto
    gap: 20px 50px

    +sm
      flex-direction: column

  &__desc
    font-size: clamp(14px, 2vw, 16px)
    line-height: 1.5
    padding: 6px 0

    p
      &:not(:first-child)
        margin: 24px 0 0

    a
      font-size: 12px
      text-transform: uppercase
      color: $themeColor2

  &__img
    position: relative
    flex: 0 0 332px

    &:after
      content: ''
      position: absolute
      left: 50%
      top: 50%
      transform: translate(-50%, -50%)
      width: 1500px
      height: 1500px
      border-radius: 50%
      width: 1300px
      background: radial-gradient(circle, rgba(2, 254, 57, 0.12) 0%, rgba(0, 0, 0, 0) 70%)

    +sm
      flex: 0 0 auto
      max-width: 240px
      margin: 0 auto

    img
      display: block
      width: 100%

  &__btns
    display: flex
    justify-content: center

  &__btn
    display: inline-flex
    margin: 0 auto

    &:after,
    &:before
      display: none


.osa-nominations
  margin: clamp(40px, 5vw, 80px) -9999px clamp(20px, 5vw, 50px)

  +sm
    margin: clamp(40px, 5vw, 80px) -20px clamp(20px, 5vw, 50px)


  &__line
    display: flex
    justify-content: center

    &:nth-child(1)
      transform: translateX(-12vw)

    &:nth-child(2)
      transform: translateX(14vw)

    &:nth-child(3)
      transform: translateX(-4vw)

    &:nth-child(4)
      transform: translateX(2vw)

    &:nth-child(5)
      transform: translateX(0)

    +sm
      &:nth-child(1),
      &:nth-child(2),
      &:nth-child(3),
      &:nth-child(4),
      &:nth-child(5)
        transform: translateX(0)

  &__nominee
    padding: 28px
    font-size: 34px
    text-transform: uppercase
    font-weight: 900
    line-height: 0.9
    text-shadow: 0 0 2px $white
    white-space: nowrap
    border: 3px solid $gray2
    margin: -1px -1px -2px -2px
    -webkit-text-stroke: 0.5px $white
    color: $mainBg

    +tablet
      padding: 18px
      font-size: 28px

    +md
      padding: 16px 20px
      font-size: 24px

    +sm
      display: none
      border: none
      border-top: 3px solid $gray2
      border-bottom: 3px solid $gray2
      width: 100%
      white-space: normal


    &:nth-child(3)
      -webkit-text-stroke: none
      color: transparent

      +sm
        display: block

